chatbot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: chatbot
  name: chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chatbot
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/done-chatbot-default: "true"
        io.kompose.service: chatbot
    spec:
      containers:
        - image: mahimtalukder/chatbot
          name: chatbot
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
